FB-18 | Service | Implement update product category feature and test in rest api service adapter
